Workaround for bad display density detection on Linux/Wayland.