@@ -54,6 +54,9 @@ kotlin {
 compose.desktop {
     application {
         mainClass = "me.okonecny.whodoes.MainKt"
+        jvmArgs(
+            "--add-exports=java.desktop/sun.java2d=ALL-UNNAMED" // For access to SunGraphicsEnvironment.
+        )
         nativeDistributions {
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
             packageName = "whodoes"
